# Havoc_c2_v8_Diamond_is_UnBreakable

./: Install_Havoc_Patched_Kali.sh  README.MD  README.md  build&install.sh  kali_build_install.sh
client/src/: global.cc
payloads/Demon/: CLAUDE.md  CMakeLists.txt
payloads/Demon/include/common/: Macros.h
payloads/Demon/include/core/: MiniStd.h  SleepObf.h  Syscalls.h  Token.h
payloads/Demon/src/core/: Command.c  MiniStd.c  Obf.c  ObjectApi.c  Socket.c  SysNative.c  Syscalls.c  Thread.c  Token.c  TransportSmb.c  Win32.c
payloads/Demon/src/inject/: InjectUtil.c
teamserver/: Install.sh.bak  go.mod
teamserver/cmd/: cmd.go
teamserver/pkg/common/builder/: builder.go
